<resources>
    <string name="app_name">ShoeStore</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Continue</string>
    <string name="welcomeDescription">Thank you for logging in and using the app, press the button below to move to the next page</string>
    <string name="welcome">Welcome</string>
    <string name="instructionsTitle">How to use</string>
    <string name="instructionsDescription">You can see all the shoes as items in a list. The button in the bottom right will allow you to add new item to the list</string>
    <string name="log_out">Log out</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="add_new_item">add new item</string>
</resources>
