<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <!-- There is no specific reason for me using constraint layout in any of these fragments.
    actually, it might have been better if i used Linear layout in all of the fragments since
    they are basic layouts and don't have any kind of nesting. but, I wanted to practice
    and implement both constraint and linear layouts in the project so i decided to do the
    first 3 fragments in constraint and the last 2 in linear layout. and yeah i love constraint a little bit more :) -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ShoeDetailFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="#EF5C8E"
        android:text="@string/add_a_new_item" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoeName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@={shoe.name}"
            android:inputType="text"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoeSize"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:text="@={shoe.size}"
            android:inputType="number"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:text="@={shoe.company}"
            android:inputType="text"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoeDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@={shoe.description}"
            android:inputType="text"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:onClick="@{view -> shoeViewModel.addShoeItem(view)}"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
         />
    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_grey_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
         />


</LinearLayout>
</layout>