<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- There is no specific reason for me using constraint layout in any of these fragments.
         actually, it might have been better if i used Linear layout in all of the fragments since
         they are basic layouts and don't have any kind of nesting. but, I wanted to practice
         and implement both constraint and linear layouts in the project so i decided to do the
         first 3 fragments in constraint and the last 2 in linear layout. and yeah i love constraint a little bit more :) -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/instructionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructionsTitle"
            android:textColor="#EF5C8E"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/instructionsDescription"
            app:layout_constraintStart_toStartOf="@+id/instructionsDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/instructionsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/instructionsDescription"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionTitle" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>